--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,3 +1,4 @@
 .container
-  background-color: cornflowerblue
-  padding: 20em
+  background-image: url("/assets/Gent_20130616.jpg")
+  width: 1044px
+  height: 783px
