mouseover en mouseout voor padden

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,3 +2,19 @@
   background-image: url("/assets/Gent_20130616.jpg")
   width: 1044px
   height: 783px
+h1, h2, h3
+  display: table-cell
+  padding-right: 3em
+h3
+  padding: 1em
+  color: #fff
+.frans
+  background-color: #0000FF
+.brussel
+  background-color: #007F7F
+.nederlands
+  background-color: #008000
+.duits
+  background-color: #EEAF00
+
+
