een groep voor talen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -6,7 +6,7 @@ h1, h2, h3
   display: table-cell
   padding-right: 3em
 h3
-  padding: 1em
+  padding: .5em
   color: #fff
 .frans
   background-color: #0000FF
